--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -9,6 +9,8 @@
   border-radius: 10px;
   margin-top: 1rem;
   background-color: white;
+  justify-content: center;
+  align-items: center;
 }
 
 .headerSection {
