--- a/src/pages/AllOffers/AllOffers.css
+++ b/src/pages/AllOffers/AllOffers.css
@@ -15,3 +15,8 @@
   margin-top: 1rem;
   background-color: white;
 }
+.Filters-Section{
+  width: 100%;
+  display: flex;
+  justify-content: start;
+}
